Bug 960904 - Allow number pickers that don't stretch the full width in <setting>; r=Unfocused
UltraBlame original commit: eb1b7ba48d220586c31355ddc640489c839b20bb

--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -747,6 +747,33 @@ setting
 type
 =
 "
+integer
+"
+]
+:
+not
+(
+[
+size
+]
+)
+textbox
+{
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+setting
+[
+type
+=
+"
 control
 "
 ]
